--- a/src/main/resources/templates/expenses/form.html
+++ b/src/main/resources/templates/expenses/form.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-    <form action="#" th:action="@{/}" th:object="${expenseForm}" method="post">
+    <form action="#" th:action="@{/expenses/new}" th:object="${expenseForm}" method="post">
         <table>
             <tr>
                 <td>Date:</td>
