--- a/src/main/resources/templates/expenses/index.html
+++ b/src/main/resources/templates/expenses/index.html
@@ -5,13 +5,15 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+    <a href="/expenses/new">Enter a new expense</a><br>
+    <h3>List of expenses</h3>
     <table>
         <thead>
             <tr>
                 <th>Id</th>
                 <th>Date</th>
                 <th>Time</th>
-                <th>Text</th>
+                <th>Description</th>
                 <th>Cost</th>
                 <th>Comment</th>
             </tr>
