--- a/src/main/resources/templates/expenses/form.html
+++ b/src/main/resources/templates/expenses/form.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+    <h3>Enter a new expense</h3>
     <form action="#" th:action="@{/expenses/new}" th:object="${expenseForm}" method="post">
         <table>
             <tr>
