--- a/src/main/resources/templates/expenses/index.html
+++ b/src/main/resources/templates/expenses/index.html
@@ -8,6 +8,7 @@
     <form th:action="@{/logout}" method="post">
         <input type="submit" value="Log Out"/>
     </form>
+    <a href="/users">User list</a><br>
     <a href="/expenses/new">Enter a new expense</a><br>
     <h3>List of expenses</h3>
     <form method="get">
