Back to old Template engine Thymeleaf Validation in expense adding The problem with editing user roles checkbox is solved

--- a/src/main/resources/templates/userEdit.html
+++ b/src/main/resources/templates/userEdit.html
@@ -10,7 +10,7 @@
     <table>
         <tr>
             <td>User Id:</td>
-            <td><input type="hidden" th:value="*{id}" name="userId"/></td>
+            <td><input type="hidden" th:value="*{id}" th:field="*{id}"/></td>
         </tr>
         <tr>
             <td>User Name:</td>
@@ -19,10 +19,10 @@
         <tr>
             <td>User Roles:</td>
             <td><ul>
-                <li th:each="role : ${roles}">
+                <li th:each="role : ${allRoles}">
                     <input type="checkbox" th:field="*{roles}" th:value="${role}" />
                     <label th:for="${#ids.prev('roles')}"
-                           th:text="${#conversions.convert(role,'String')}"></label>
+                        th:text="${#conversions.convert(role,'String')}"></label>
                 </li>
             </ul></td>
         </tr>
