--- a/src/main/resources/templates/expenseEdit.html
+++ b/src/main/resources/templates/expenseEdit.html
@@ -6,35 +6,35 @@
 </head>
 <body>
     <h3>Enter a new expense</h3>
-    <form action="#" th:action="@{/expenses/new}" th:object="${expenseForm}" method="post">
+    <form action="#" th:action="@{/expenses/new}" th:object="${expense}" method="post">
         <table>
             <tr>
                 <td>Date:</td>
-                <td><input type="date" th:field="*{date}" /></td>
+                <td><input type="date" th:value="*{date}" th:field="*{date}" /></td>
                 <td th:if="${#fields.hasErrors('date')}" th:errors="*{date}">Date Error</td>
             </tr>
             <tr>
                 <td>Time:</td>
-                <td><input type="time" th:field="*{time}" /></td>
+                <td><input type="time" th:value="*{time}" th:field="*{time}" /></td>
                 <td th:if="${#fields.hasErrors('time')}" th:errors="*{time}">Time Error</td>
             </tr>
             <tr>
                 <td>Description:</td>
-                <td><input type="text" th:field="*{text}" /></td>
+                <td><input type="text" th:value="*{text}" th:field="*{text}" /></td>
                 <td th:if="${#fields.hasErrors('text')}" th:errors="*{text}">Description Error</td>
             </tr>
             <tr>
                 <td>Cost:</td>
-                <td><input type="number" step="0.01" th:field="*{cost}" /></td>
+                <td><input type="number" step="0.01" th:value="*{cost}" th:field="*{cost}" /></td>
                 <td th:if="${#fields.hasErrors('cost')}" th:errors="*{cost}">Cost Error</td>
             </tr>
             <tr>
                 <td>Comment:</td>
-                <td><input type="text" th:field="*{comment}" /></td>
+                <td><input type="text" th:value="*{comment}" th:field="*{comment}" /></td>
                 <td th:if="${#fields.hasErrors('comment')}" th:errors="*{comment}">Comment Error</td>
             </tr>
             <tr>
-                <td><button type="submit">Submit</button></td>
+                <td><button type="submit">Save</button></td>
             </tr>
         </table>
     </form>
