--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,6 +17,6 @@
     <div><label> Password: <input type="password" name="password"/> </label></div>
     <div><input type="submit" value="Log In"/></div>
 </form>
-<a href ="/registration">Add new user</a>
+<a href ="/registration">Register new user</a>
 </body>
 </html>
