--- a/src/main/resources/templates/userEdit.html
+++ b/src/main/resources/templates/userEdit.html
@@ -9,12 +9,12 @@
 <form action="#" th:action="@{/users}" th:object="${user}" method="post">
     <table>
         <tr>
-            <td>User Id:</td>
             <td><input type="hidden" th:value="*{id}" th:field="*{id}"/></td>
+            <td><input type="hidden" th:value="*{password}" th:field="*{password}"/></td>
         </tr>
         <tr>
             <td>User Name:</td>
-            <td><input type="text" th:field="*{username}" /></td>
+            <td><input type="text" th:value="*{username}" th:field="*{username}" /></td>
         </tr>
         <tr>
             <td>User Roles:</td>
@@ -25,6 +25,10 @@
                         th:text="${#conversions.convert(role,'String')}"></label>
                 </li>
             </ul></td>
+        </tr>
+        <tr>
+            <td>New password</td>
+            <td><input type="password" name="newPassword"/></td>
         </tr>
         <tr>
             <td><button type="submit">Save</button></td>
