--- a/src/main/resources/templates/userAdd.html
+++ b/src/main/resources/templates/userAdd.html
@@ -5,14 +5,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<h3>User Editor</h3>
+<h3>User Adding</h3>
 <div th:if="${usernameError}" th:text="*{usernameError}">
 </div>
-<form action="#" th:action="@{/users}" th:object="${user}" method="post">
+<form action="#" th:action="@{/users/new}" th:object="${user}" method="post">
     <table>
         <tr>
             <td><input type="hidden" th:value="*{id}" th:field="*{id}"/></td>
-            <td><input type="hidden" th:value="*{password}" th:field="*{password}"/></td>
         </tr>
         <tr>
             <td>User Name:</td>
@@ -30,15 +29,16 @@
             </ul></td>
         </tr>
         <tr>
-            <td>New password</td>
-            <td><input type="password" name="newPassword"/></td>
+            <td>Password</td>
+            <td><input type="password" th:value="*{password}" th:field="*{password}" /></td>
+            <td th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password Error</td>
         </tr>
         <tr>
             <td>User Active:</td>
             <td><input type="checkbox" th:field="*{active}" th:checked="${active}" /></td>
         </tr>
         <tr>
-            <td><button type="submit">Save</button></td>
+            <td><button type="submit">Add</button></td>
         </tr>
     </table>
 </form>
