--- a/src/main/resources/templates/expenses.html
+++ b/src/main/resources/templates/expenses.html
@@ -36,6 +36,7 @@
                 <td th:text="${expense.cost}"></td>
                 <td th:text="${expense.comment}"></td>
                 <td th:text="${expense.authorName}"></td>
+                <td><a th:href="@{'/expenses/' + ${expense.id}}">edit</a></td>
             </tr>
         </tbody>
     </table>
