--- a/src/main/resources/templates/greeting.html
+++ b/src/main/resources/templates/greeting.html
@@ -9,7 +9,7 @@
     <input type="submit" value="Log Out"/>
 </form>
 <p th:text="'Hello, ' + ${user.username} + '!'"></p>
-<p><a href="/expenses">Expenses</a></p>
-<p><a href="/users" th:if="${user.isAdmin() or user.isManager()}" >Users</a></p>
+<p><a href="/expenses" th:if="not ${user.isManagerOnly()}" >Expenses</a></p>
+<p><a href="/users" th:if="${user.isAdmin()} or ${user.isManager()}" >Users</a></p>
 </body>
 </html>
