--- a/src/main/resources/templates/greeting.html
+++ b/src/main/resources/templates/greeting.html
@@ -9,7 +9,8 @@
     <input type="submit" value="Log Out"/>
 </form>
 <p th:text="'Hello, ' + ${user.username} + '!'"></p>
-<p><a href="/expenses" th:if="not ${user.isManagerOnly()}" >Expenses</a></p>
+<p><a href="/expenses" th:if="${user.isUser()} or ${user.isAdmin()}" >My Expenses</a></p>
+<p><a href="/user-expenses" th:if="${user.isAdmin()}" >All Expenses</a></p>
 <p><a href="/users" th:if="${user.isAdmin()} or ${user.isManager()}" >Users</a></p>
 </body>
 </html>
