--- a/src/main/resources/templates/expenses.html
+++ b/src/main/resources/templates/expenses.html
@@ -8,7 +8,7 @@
     <form th:action="@{/logout}" method="post">
         <input type="submit" value="Log Out"/>
     </form>
-    <a href="/users">User list</a><br>
+    <a href="/users" th:if="${user.isAdmin()}" >User list</a><br>
     <a href="/user-expenses" th:if="${user.isAdmin()}" >All Expenses</a><br>
     <a href="/expenses/new">Enter a new expense</a><br>
     <h3>List of expenses</h3>
