Average expenses are displayed only when the filter field is empty.

--- a/src/main/resources/templates/expenses.html
+++ b/src/main/resources/templates/expenses.html
@@ -50,6 +50,6 @@
         </tbody>
     </table>
     <p th:text="'Total expenses = ' + ${totalExpenses} "></p>
-    <p th:text="'Average expenses per day = ' + ${averageExpenses} "></p>
+    <p th:if="${filter.isEmpty()}" th:text="'Average expenses per day = ' + ${averageExpenses} "></p>
 </body>
 </html>
