--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -11,7 +11,7 @@
 <h3>List of users</h3>
 <a href="/users/new">Add new user</a>
 <form method="get">
-    <input type="text" name="filterUsr" th:value="${filterUsr}">
+    <input type="text" name="filter" th:value="${filter}">
     <button type="submit">Find</button>
 </form>
 <table>
